Defined and use variable MPI4PY

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ if   ( DEFINED ENV{MPI_ROOT_DIR} OR DEFINED MPI_ROOT_DIR )
   endif( DEFINED  ENV{MPI_ROOT_DIR} )
 endif( DEFINED ENV{MPI_ROOT_DIR} OR DEFINED MPI_ROOT_DIR )
 
+# Definition of SOLVERLAB_WITH_MPI
 if(    DEFINED ENV{MPI_HOME} OR MPI_HOME )
   set(SOLVERLAB_WITH_MPI ON)
   find_package(MPI)
@@ -74,6 +75,15 @@ if(    DEFINED ENV{MPI_HOME} OR MPI_HOME )
 else(  DEFINED ENV{MPI_HOME} OR MPI_HOME )
   set(SOLVERLAB_WITH_MPI OFF)
 endif( DEFINED ENV{MPI_HOME} OR MPI_HOME )
+
+# Definition of MPI4PY_ROOT_DIR
+if(   SOLVERLAB_WITH_PYTHON AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
+  if(    DEFINED $ENV{MPI4PY_ROOT_DIR})
+    set(MPI4PY_ROOT_DIR $ENV{MPI4PY_ROOT_DIR})
+  else(  DEFINED $ENV{MPI4PY_ROOT_DIR})
+    set(MPI4PY_ROOT_DIR ${PETSC_DIR}/${PETSC_ARCH}/lib/mpi4py)
+  endif( DEFINED $ENV{MPI4PY_ROOT_DIR})
+endif(SOLVERLAB_WITH_PYTHON AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
 
 ############################
 # Definition of HDF5_ROOT  #
@@ -418,7 +428,7 @@ if( MEDCOUPLING_ROOT_DIR OR DEFINED ENV{MEDCOUPLING_ROOT_DIR})
   find_package(MEDCoupling CONFIG REQUIRED)   # CONFIG is important !
   message( STATUS "MEDCoupling found. Version is ${MEDCoupling_VERSION}")
 
-else( DEFINED MEDCOUPLING_ROOT_DIR OR DEFINED ENV{MEDCOUPLING_ROOT_DIR})
+else( MEDCOUPLING_ROOT_DIR OR DEFINED ENV{MEDCOUPLING_ROOT_DIR})
   message(STATUS "MEDCoupling will be downloaded and installed from ${DOWNLOAD_MEDCOUPLING}")
   set(MEDCOUPLING_ROOT_DIR ${CMAKE_INSTALL_PREFIX}/lib/medcoupling) # Location of the final install
   SET(ENV{HDF5_ROOT} ${HDF5_ROOT})#MEDCoupling install process seems to require an environment variable
@@ -641,6 +651,12 @@ if (SOLVERLAB_WITH_TESTS)                                                       
 endif(SOLVERLAB_WITH_TESTS)			
 				    
 # Enter subdirectories
+set(CDMATH_WITH_POSTPRO ${SOLVERLAB_WITH_POSTPRO} )
+set(CDMATH_WITH_PETSC ${SOLVERLAB_WITH_PETSC} )
+set(CDMATH_WITH_DOCUMENTATION ${SOLVERLAB_WITH_DOCUMENTATION} )
+set(CDMATH_WITH_PYTHON ${SOLVERLAB_WITH_PYTHON} )
+set(CDMATH_WITH_PACKAGE ${SOLVERLAB_WITH_PACKAGE} )
+set(CDMATH_WITH_TESTS ${SOLVERLAB_WITH_TESTS} )
 add_subdirectory (CDMATH)
 if(SOLVERLAB_WITH_COREFLOWS)
   set(COREFLOWS_WITH_DOCUMENTATION ${SOLVERLAB_WITH_DOCUMENTATION} )
