--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -11,6 +11,16 @@ INCLUDE_DIRECTORIES(
   ${SLEPC_INCLUDES}
 )
 
+IF(    ${SOLVERLAB_WITH_MPI} )
+  INCLUDE_DIRECTORIES(
+    ${Python_INCLUDE_DIRS}
+    ${CoreFlows_INCLUDES}											    #
+    ${PETSC_INCLUDES}
+    ${SLEPC_INCLUDES}
+    ${MPI4PY_ROOT_DIR}/include/mpi4py
+  ) 
+ENDIF( ${SOLVERLAB_WITH_MPI} )
+
 IF   (${CMAKE_VERSION} VERSION_LESS "3.8.0") 
   SWIG_ADD_MODULE(CoreFlows python CoreFlows.i)
 ELSE (${CMAKE_VERSION} VERSION_LESS "3.8.0") 
