--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,13 +77,18 @@ else(  DEFINED ENV{MPI_HOME} OR MPI_HOME )
 endif( DEFINED ENV{MPI_HOME} OR MPI_HOME )
 
 # Definition of MPI4PY_ROOT_DIR
-if(   SOLVERLAB_WITH_PYTHON AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
+if(   ${SOLVERLAB_WITH_PYTHON} AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
   if(    DEFINED $ENV{MPI4PY_ROOT_DIR})
     set(MPI4PY_ROOT_DIR $ENV{MPI4PY_ROOT_DIR})
   else(  DEFINED $ENV{MPI4PY_ROOT_DIR})
     set(MPI4PY_ROOT_DIR ${PETSC_DIR}/${PETSC_ARCH}/lib/mpi4py)
   endif( DEFINED $ENV{MPI4PY_ROOT_DIR})
-endif(SOLVERLAB_WITH_PYTHON AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
+endif(${SOLVERLAB_WITH_PYTHON} AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
+
+if(DEFINED MPI4PY_ROOT_DIR)
+  message(STATUS "MPI4PY directory is ${MPI4PY_ROOT_DIR}" )
+  SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DMPI4PY_ROOT_DIR=${MPI4PY_ROOT_DIR})
+endif(DEFINED MPI4PY_ROOT_DIR)
 
 ############################
 # Definition of HDF5_ROOT  #
