--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,10 +85,10 @@ if(   ${SOLVERLAB_WITH_PYTHON} AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_D
   endif( DEFINED $ENV{MPI4PY_ROOT_DIR})
 endif(${SOLVERLAB_WITH_PYTHON} AND ${SOLVERLAB_WITH_MPI} AND NOT ${MPI4PY_ROOT_DIR})
 
-if(DEFINED MPI4PY_ROOT_DIR)
+if(    $MPI4PY_ROOT_DIR)
   message(STATUS "MPI4PY directory is ${MPI4PY_ROOT_DIR}" )
   SET(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DMPI4PY_ROOT_DIR=${MPI4PY_ROOT_DIR})
-endif(DEFINED MPI4PY_ROOT_DIR)
+endif( $MPI4PY_ROOT_DIR)
 
 ############################
 # Definition of HDF5_ROOT  #
