--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -140,6 +140,7 @@ if( SOLVERLAB_WITH_MPI )
   add_test(NAME StationaryDiffusion_TwoIndependentSimulations_2Procs COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/Parallelism/testTwoSimulations.py")     
   add_test(NAME SendRecvMEDCouplingFieldSameMesh_2Procs              COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/Parallelism/testSendRecvFieldSameMesh.py")     
   add_test(NAME SendRecvMEDCouplingFieldDifferentMeshes_2Procs       COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/Parallelism/testSendRecvFieldDifferentMeshes.py")     
+  add_test(NAME SendRecvMEDCouplingFieldSubComm_3Procs               COMMAND "${MPIEXEC}" "-n" "3" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/Parallelism/testSendRecvFieldSubComm.py")     
 endif( SOLVERLAB_WITH_MPI )
 
 ############# python convergence tests
