--- a/CDMATH/swig/CMakeLists.txt
+++ b/CDMATH/swig/CMakeLists.txt
@@ -2,6 +2,7 @@ INCLUDE(${SWIG_USE_FILE})
 
 INCLUDE_DIRECTORIES(
   ${Python_INCLUDE_DIRS}
+  ${MEDFILE_INCLUDE_DIRS}
   ${MEDCOUPLING_INCLUDE_DIR}
   ${BASE_DIR}/inc
   ${MESH_DIR}/inc
