Updated Doxygen documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -646,6 +646,11 @@ if (SOLVERLAB_WITH_DOCUMENTATION)                                               
   if   (NOT DOXYGEN_FOUND)
     message (FATAL_ERROR "Doxygen is needed to build the documentation. Please install it correctly.")
   endif(NOT DOXYGEN_FOUND)
+  
+  add_custom_target (doc COMMAND ${DOXYGEN_EXECUTABLE}                                                  #
+  configure_file (Doxyfile.in ${PROJECT_BINARY_DIR}/Doxyfile  @ONLY IMMEDIATE)
+  SOURCES ${PROJECT_BINARY_DIR}/Doxyfile)			                                            #
+  install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/html DESTINATION share/doc/solverlab-dev-doc OPTIONAL)                  #
 endif(SOLVERLAB_WITH_DOCUMENTATION)			
 
 if (SOLVERLAB_WITH_TESTS)                                                                                  #
