Working on detection of parallel compilers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,9 +60,13 @@ list (APPEND CMAKE_MODULE_PATH "${SOLVERLAB_SOURCE_DIR}/cmake_files")
 #############################
 # Detection of MPI + MPI4PY #
 #############################
-if   ( DEFINED MPI_ROOT_DIR )
-  set(MPI_HOME    ${MPI_ROOT_DIR})
-endif( DEFINED MPI_ROOT_DIR )
+if   ( DEFINED ENV{MPI_ROOT_DIR} OR DEFINED MPI_ROOT_DIR )
+  if   ( DEFINED  ENV{MPI_ROOT_DIR} )
+    set(MPI_HOME $ENV{MPI_ROOT_DIR})
+  else ( DEFINED  ENV{MPI_ROOT_DIR} )
+    set(MPI_HOME    ${MPI_ROOT_DIR})
+  endif( DEFINED  ENV{MPI_ROOT_DIR} )
+endif( DEFINED ENV{MPI_ROOT_DIR} OR DEFINED MPI_ROOT_DIR )
 
 # Definition of SOLVERLAB_WITH_MPI
 if(    DEFINED ENV{MPI_HOME} OR MPI_HOME )
@@ -72,6 +76,14 @@ if(    DEFINED ENV{MPI_HOME} OR MPI_HOME )
     set ( MPI_LIBRARY ${MPI_HOME}/lib/libmpi.so )
   endif(${MPI_LIBRARY} STREQUAL "MPI_LIBRARY-NOTFOUND")
   message ( STATUS "MPI executable is ${MPIEXEC}" )
+  if   (NOT DEFINED CMAKE_CXX_COMPILER)
+    set(CMAKE_CXX_COMPILER ${MPI_HOME}/bin/mpic++)
+  endif(NOT DEFINED CMAKE_CXX_COMPILER)
+  message ( STATUS "MPI C++ compiler is ${CMAKE_CXX_COMPILER}" )
+  if   (NOT DEFINED CMAKE_C_COMPILER)
+    set(CMAKE_C_COMPILER ${MPI_HOME}/bin/mpicc)
+  endif(NOT DEFINED CMAKE_C_COMPILER)
+  message ( STATUS "MPI C compiler is ${CMAKE_C_COMPILER}" )
 else(  DEFINED ENV{MPI_HOME} OR MPI_HOME )
   set(SOLVERLAB_WITH_MPI OFF)
 endif( DEFINED ENV{MPI_HOME} OR MPI_HOME )
