--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,13 +60,9 @@ list (APPEND CMAKE_MODULE_PATH "${SOLVERLAB_SOURCE_DIR}/cmake_files")
 #############################
 # Detection of MPI + MPI4PY #
 #############################
-if   ( DEFINED ENV{MPI_ROOT_DIR} OR DEFINED MPI_ROOT_DIR )
-  if   ( DEFINED  ENV{MPI_ROOT_DIR} )
-    set(MPI_HOME $ENV{MPI_ROOT_DIR})
-  else ( DEFINED  ENV{MPI_ROOT_DIR} )
-    set(MPI_HOME    ${MPI_ROOT_DIR})
-  endif( DEFINED  ENV{MPI_ROOT_DIR} )
-endif( DEFINED ENV{MPI_ROOT_DIR} OR DEFINED MPI_ROOT_DIR )
+if   ( MPI_ROOT_DIR )
+  set(MPI_HOME    ${MPI_ROOT_DIR})
+endif( MPI_ROOT_DIR )
 
 # Definition of SOLVERLAB_WITH_MPI
 if(    DEFINED ENV{MPI_HOME} OR MPI_HOME )
