Added comment about insertion of Mesh.hxx in coreflows.i

--- a/CoreFlows/swig/CMakeLists.txt
+++ b/CoreFlows/swig/CMakeLists.txt
@@ -9,7 +9,7 @@ INCLUDE_DIRECTORIES(
   ${CoreFlows_INCLUDES}									    #
   ${PETSC_INCLUDES}
   ${SLEPC_INCLUDES}
-  ${SOLVERLAB_SOURCE_DIR}/CDMATH/mesh/inc
+  ${SOLVERLAB_SOURCE_DIR}/CDMATH/mesh/inc # To include Mesh.hxx for the enum EntityType
 )
 
 IF(    ${SOLVERLAB_WITH_MPI} )
