--- a/CDMATH/tests/examples/WaveSystem/CMakeLists.txt
+++ b/CDMATH/tests/examples/WaveSystem/CMakeLists.txt
@@ -30,6 +30,7 @@ IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
     ADD_SUBDIRECTORY(WaveSystem_Shock/WaveSystemPStag)
     ADD_SUBDIRECTORY(WaveSystem_Shock/WaveSystemStaggered)
     ADD_SUBDIRECTORY(WaveSystem_Shock/WaveSystemCentered)
+    ADD_SUBDIRECTORY(WaveSystemSpectrum)
 
 ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
 
