Added new tests to compare linear solvers (gmres, cgne and lu)

--- a/CDMATH/tests/examples/WaveSystem/CMakeLists.txt
+++ b/CDMATH/tests/examples/WaveSystem/CMakeLists.txt
@@ -31,6 +31,7 @@ IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
     ADD_SUBDIRECTORY(WaveSystem_Shock/WaveSystemStaggered)
     ADD_SUBDIRECTORY(WaveSystem_Shock/WaveSystemCentered)
     ADD_SUBDIRECTORY(WaveSystemSpectrum)
+    ADD_SUBDIRECTORY(WaveSystem_LinearSolvers)
 
 ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
 
