--- a/CDMATH/tests/examples/WaveSystem/WaveSystem_LinearSolvers/CMakeLists.txt
+++ b/CDMATH/tests/examples/WaveSystem/WaveSystem_LinearSolvers/CMakeLists.txt
@@ -7,43 +7,43 @@ if (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
 
     SET(NUM_METHOD  centered  )
 
-    ADD_TEST(ExampleWaveSystem_GMRES_Centered_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_GMRES_Centered_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(NUM_METHOD  upwind  )
 
-    ADD_TEST(ExampleWaveSystem_GMRES_Upwind_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_GMRES_Upwind_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(NUM_METHOD  PStag  )
 
-    ADD_TEST(ExampleWaveSystem_GMRES_PStag_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_GMRES_PStag_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(LIN_SOLVER  cgne  )
 
     SET(NUM_METHOD  centered  )
 
-    ADD_TEST(ExampleWaveSystem_CGNE_Centered_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_CGNE_Centered_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(NUM_METHOD  upwind  )
 
-    ADD_TEST(ExampleWaveSystem_CGNE_Upwind_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_CGNE_Upwind_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(NUM_METHOD  PStag  )
 
-    ADD_TEST(ExampleWaveSystem_CGNE_PStag_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_CGNE_PStag_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(LIN_SOLVER  lu  )
 
     SET(NUM_METHOD  centered  )
 
-    ADD_TEST(ExampleWaveSystem_LU_Centered_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_LU_Centered_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(NUM_METHOD  upwind  )
 
-    ADD_TEST(ExampleWaveSystem_LU_Upwind_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_LU_Upwind_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
     SET(NUM_METHOD  PStag  )
 
-    ADD_TEST(ExampleWaveSystem_LU_PStag_triangles ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/WaveSystemLinearSolvers.py  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
+    ADD_TEST(ExampleWaveSystem_LU_PStag_triangles ${PYTHON_EXECUTABLE} ${WaveSystemLinearSolvers_script}  ${MESH_FILE} ${NUM_METHOD} ${LIN_SOLVER})
 
 endif (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
 
