ok for matix3.0 salome9.7 compilation, forget standalone compilation, stay CMake and ModelSvl test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -679,12 +679,18 @@ if (SOLVERLAB_WITH_TESTS)                                                       
 endif(SOLVERLAB_WITH_TESTS)			
 				    
 # Enter subdirectories
+
 set(CDMATH_WITH_POSTPRO ${SOLVERLAB_WITH_POSTPRO} )
 set(CDMATH_WITH_PETSC ${SOLVERLAB_WITH_PETSC} )
 set(CDMATH_WITH_DOCUMENTATION ${SOLVERLAB_WITH_DOCUMENTATION} )
 set(CDMATH_WITH_PYTHON ${SOLVERLAB_WITH_PYTHON} )
 set(CDMATH_WITH_PACKAGE ${SOLVERLAB_WITH_PACKAGE} )
 set(CDMATH_WITH_TESTS ${SOLVERLAB_WITH_TESTS} )
+
+add_subdirectory (images)
+add_subdirectory (scripts)
+add_subdirectory (READMES)
+
 add_subdirectory (CDMATH)
 if(SOLVERLAB_WITH_COREFLOWS)
   set(COREFLOWS_WITH_DOCUMENTATION ${SOLVERLAB_WITH_DOCUMENTATION} )
