--- a/CoreFlows/gui/CMakeLists.txt
+++ b/CoreFlows/gui/CMakeLists.txt
@@ -23,7 +23,7 @@ SET(GUI_bin_SCRIPTS
     ${CMAKE_CURRENT_SOURCE_DIR}/solverlabGUI
 )
 
-SET(solverlabpy_SCRIPTS
+SET(solverlabpy_DIR
     ${CMAKE_CURRENT_SOURCE_DIR}/solverlabpy
 )
 
@@ -31,12 +31,18 @@ SET(GUI_lib_SCRIPTS
     ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py
 )
 
+# TODO cvw for test
+INSTALL(DIRECTORY ${solverlabpy_DIR} DESTINATION bin)
+
 
 IF   ( (EXISTS $ENV{CONFIGURATION_ROOT_DIR}) AND (EXISTS $ENV{KERNEL_ROOT_DIR}) AND (EXISTS $ENV{GUI_ROOT_DIR}) )
+
   ADD_SUBDIRECTORY(salome)
+
 ELSE ( (EXISTS $ENV{CONFIGURATION_ROOT_DIR}) AND (EXISTS $ENV{KERNEL_ROOT_DIR}) AND (EXISTS $ENV{GUI_ROOT_DIR}) )
+
   INSTALL(FILES ${GUI_bin_SCRIPTS} DESTINATION bin/salome)
-  INSTALL(DIRECTORY ${solverlabpy_SCRIPTS} DESTINATION bin/salome)
+  # INSTALL(DIRECTORY ${solverlabpy_SCRIPTS} DESTINATION bin/salome)
   INSTALL(FILES ${GUI_lib_SCRIPTS} DESTINATION lib/python)
 
   # Configure file SalomePyQt_MockUp.py
@@ -47,6 +53,7 @@ ELSE ( (EXISTS $ENV{CONFIGURATION_ROOT_DIR}) AND (EXISTS $ENV{KERNEL_ROOT_DIR}) 
       @ONLY
   )
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/SalomePyQt_MockUp.py DESTINATION lib/python)
+
   # Configure file slutils.py
   SET(SALOME_INSTALL_PYTHON "lib/python")#This is to use the same variable as salome
   configure_file(
@@ -55,5 +62,6 @@ ELSE ( (EXISTS $ENV{CONFIGURATION_ROOT_DIR}) AND (EXISTS $ENV{KERNEL_ROOT_DIR}) 
       @ONLY
   )
   INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/slutils.py DESTINATION lib/python)
+
 ENDIF( (EXISTS $ENV{CONFIGURATION_ROOT_DIR}) AND (EXISTS $ENV{KERNEL_ROOT_DIR}) AND (EXISTS $ENV{GUI_ROOT_DIR}) )
 
