--- a/CoreFlows/gui/salome/resources/CMakeLists.txt
+++ b/CoreFlows/gui/salome/resources/CMakeLists.txt
@@ -23,7 +23,7 @@ SALOME_CONFIGURE_FILE(SalomeApp.xml.in SalomeAppSL.xml)
 SET(_res_FILES
     ${CMAKE_CURRENT_BINARY_DIR}/SalomeApp.xml
     ${CMAKE_CURRENT_BINARY_DIR}/SalomeAppSL.xml
-    icon.png
+    logoSOLVERLAB.png
  )
 
 INSTALL(FILES ${_res_FILES} DESTINATION ${SALOME_CoreFlows_INSTALL_RES_DATA})
