--- a/CDMATH/tests/CMakeLists.txt
+++ b/CDMATH/tests/CMakeLists.txt
@@ -56,7 +56,7 @@ SET(MED_MESHES  ${CMAKE_CURRENT_SOURCE_DIR}/ressources  )
 
 FILE(COPY doc/ DESTINATION share/doc/)
 
-#variables to be used in both example ans validation tests
+#variables to be used in both example and validation tests
 SET(WaveSystemLinearSolvers_script ${CMAKE_CURRENT_SOURCE_DIR}/examples/WaveSystem/WaveSystem_LinearSolvers/WaveSystemLinearSolvers.py)
 
 if (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
