--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -81,6 +81,8 @@ CreateTestExecAndInstall(SinglePhase_2DWallHeatedChannel.cxx  "${libs_for_tests}
 CreateTestExecAndInstall(SinglePhase_3DHeatDrivenCavity.cxx  "${libs_for_tests}" "C++ fv singlephase 3D heating structured cubes coreflows" )
 CreateTestExecAndInstall(SinglePhase_HeatedWire_2Branches.cxx  "${libs_for_tests}" "C++ fv singlephase 1D branches heating unstructured coreflows" )
 
+CreateTestExecAndInstall(IsothermalSinglePhase_1DRiemannProblem.cxx  "${libs_for_tests}" "C++ fv isothermalsinglephase 1D riemann structured coreflows" )
+
 CreateTestExecAndInstall(DriftModel_1DBoilingAssembly.cxx  "${libs_for_tests}" "C++ fv driftmodel 1D heating boiling structured coreflows" )
 CreateTestExecAndInstall(DriftModel_1DBoilingChannel.cxx  "${libs_for_tests}" "C++ fv driftmodel 1D heating boiling structured coreflows" )
 CreateTestExecAndInstall(DriftModel_1DChannelGravity.cxx  "${libs_for_tests}" "C++ fv driftmodel 1D gravity structured coreflows" )
